# parmys-plugin-cmake

./: CMakeLists.txt
